Social login section mobile CSS fix

--- a/civictechprojects/static/css/partials/_LogInController.scss
+++ b/civictechprojects/static/css/partials/_LogInController.scss
@@ -69,11 +69,13 @@
   text-decoration: none;
   border: 1px solid $color-background-dark;
   margin-bottom: 10px;
-  width: 325px;
+  max-width: 325px;
   margin-left: auto;
   margin-right: auto;
 
   a {
+    display: flex;
+    align-items: center;
     color: $color-text-dark;
     padding-left: 15px;
   }
